--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
     rel="stylesheet">
     <!-- Add opencv -->
-    <script async src="/Resources/opencv.js" onload="openCvReady()" ></script>
+    <script async src="./Resources/opencv.js" onload="openCvReady()" ></script>
 </head>
 <body>
     <div class="main-page">
@@ -35,14 +35,14 @@
 
             <!-- Tablet Container -->
             <div class="tablet-container">
-                <img id="table-image" src="/Resources/Template/tablet.png"
+                <img id="table-image" src="./Resources/Template/tablet.png"
                      alt="tablet frame"
                      width="1080"
                      height="640">
                 <canvas id="main-canvas">
                     <img 
                     id="img-main" 
-                    src="/Resources/Template/car.png" 
+                    src="./Resources/Template/car.png" 
                     alt="car image"
                     width="980"
                     height="580">
