--- a/index.html
+++ b/index.html
@@ -86,6 +86,6 @@
         
     </div>
     <!-- Link JS -->
-    <script src="/Template/main.js"></script>
+    <script src="./Template/main.js"></script>
 </body>
 </html>
