added anothre img (main)

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <canvas id="main-canvas">
                     <img 
                     id="img-main" 
-                    src="./Resources/Template/car.png" 
+                    src="./Resources/Template/scene.jpg" 
                     alt="car image"
                     width="980"
                     height="580">
